--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                     <img src="ghee.jpg" alt="Pure Ghee">
                     <h3>Pure Ghee</h3>
                     <p>Rich, aromatic, and pure. Price: ₹500/kg</p>
-                    <a href="koshalamprogram.html" target="_blank">Learn More</a>
+                    <a href="ghee.html" target="_blank">Learn More</a>
                 </div>
 
                 <div class="product-card">
