--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
  
             <h1>Welcome to Lassi Valley!</h1>
              <p>
-    | ¤ |  Explore our Lassi Valley Webpage  with Mo. Sameer Hasan | ¤ |
+    | ¤ |  Explore our Lassi Valley Webpage  with G. I. C.  Barwala Vikasanagar D. Dun from Uttrakhand | ¤ |
  </p>
             <p>Experience the rich and creamy taste of Uttrakhand tradition.</p>
         </section>
