--- a/index.html
+++ b/index.html
@@ -247,35 +247,35 @@
                          <div class="product-card">
              <img src="buransh.jpg" alt="Buransh Lassi">
              <h3>Buransh Lassi</h3>
-             <p>Taste the uttrakhand tradition / Price: ₹80</p>
+             <p>Taste the uttrakhand tradition / Price: ₹89</p>
              <a href="buranshlassi.html" target="_blank">Learn More</a>
          </div>
 
                 <div class="product-card">
                     <img src="chocolate.jpg" alt="Chocolate Lassi">
                     <h3>Chocolate Lassi</h3>
-                    <p>Rich and delicious . Price: ₹80</p>
+                    <p>Rich and delicious . Price: ₹79</p>
                     <a href="lassi.html" target="_blank">Learn More</a>
                 </div>
 
                 <div class="product-card">
                     <img src="pan.jpg" alt="Pan Lassi">
                     <h3>Pan Lassi</h3>
-                    <p>A unique and refreshing blend. Price: ₹90</p>
+                    <p>A unique and refreshing blend. Price: ₹89</p>
                     <a href="panlassi.html" target="_blank">Learn More</a>
                 </div>
 
                 <div class="product-card">
                     <img src="mango.jpg" alt="Mango Lassi">
                     <h3>Mango Lassi</h3>
-                    <p>Sweet, tangy, and delightful. Price: ₹75</p>
+                    <p>Sweet, tangy, and delightful. Price: ₹79</p>
                     <a href="mangolassi.html" target="_blank">Learn More</a>
                 </div>
 
                 <div class="product-card">
                     <img src="strawberry .jpg" alt="Strawberry Lassi">
                     <h3>Strawberry Lassi</h3>
-                    <p>Fruity and fresh. Price: ₹85</p>
+                    <p>Fruity and fresh. Price: ₹69</p>
                     <a href="strawberrylassi.html" target="_blank">Learn More</a>
                 </div>
 
@@ -283,21 +283,21 @@
                 <div class="product-card">
                     <img src="shugr.jpg" alt="Sugar Free Lassi">
                     <h3>Sugar-Free Lassi</h3>
-                    <p>Healthy and delicious. Price: ₹80</p>
+                    <p>Healthy and delicious. Price: ₹59</p>
                     <a href="shugrfree.html" target="_blank">Learn More</a>
                 </div>
 
                 <div class="product-card">
                     <img src="ghee.jpg" alt="Pure Ghee">
                     <h3>Pure Ghee</h3>
-                    <p>Rich, aromatic, and pure. Price: ₹500/kg</p>
+                    <p>Rich, aromatic, and pure. Price: ₹800/kg</p>
                     <a href="ghee.html" target="_blank">Learn More</a>
                 </div>
 
                 <div class="product-card">
                     <img src="paneer.jpg" alt="Fresh Paneer">
                     <h3>Fresh Paneer</h3>
-                    <p>Soft and creamy. Price: ₹300/kg</p>
+                    <p>Soft and creamy. Price: ₹450/kg</p>
                     <a href="paneer.html" target="_blank">Learn More</a>
                 </div>
 
@@ -312,10 +312,10 @@
            <p>&copy; 2025 Lassi Valley. All rights reserved.</p>
     <h2>supporters</h2>
   <p>
-          ®  Uddayam Foundation©
+          ®  Udhyam Foundation©
         </p>
         <p>
-        ® Kaushlam team ©
+        ® Kaushalam team ©
         </p>
         <p>
            ® GIC Barwala Vikasanagar school's teachers and also our classmate©
