--- a/koshalamprogram.html
+++ b/koshalamprogram.html
@@ -161,19 +161,19 @@
      </header>
 
      <main>
-         <h1 class="page-title">The Kaushlam Program by Uddayam Foundation </h1>
+         <h1 class="page-title">The Kaushalam Program by Udhyam Foundation </h1>
 
          <div class="image-container">
             
          </div>
 
-         <h2>What is Kaushlam?</h2>
+         <h2>What is Kaushalam?</h2>
          <p>
-             The **Kaushlam Program**, an initiative by **Uddayam Foundation **, is a unique and impactful initiative focused on empowering local communities. It's designed to promote traditional skills, sustainable practices, and economic self-reliance. At Lassi Valley, we are proud to be associated with this program, as it aligns perfectly with our values of quality, community, and tradition.
+             The **Kaushalam Program**, an initiative by **Udhyam Foundation **, is a unique and impactful initiative focused on empowering local communities. It's designed to promote traditional skills, sustainable practices, and economic self-reliance. At Lassi Valley, we are proud to be associated with this program, as it aligns perfectly with our values of quality, community, and tradition.
          </p>
 
          <p>
-             Kaushlam helps small-scale producers and artisans by providing them with the necessary resources and market access to thrive. This not only uplifts their livelihoods but also preserves valuable cultural heritage and skills that might otherwise be lost. Our involvement helps ensure that our products, like our delicious lassis and pure paneer, are part of a larger, positive cycle of growth and support.
+             Kaushalam helps small-scale producers and artisans by providing them with the necessary resources and market access to thrive. This not only uplifts their livelihoods but also preserves valuable cultural heritage and skills that might otherwise be lost. Our involvement helps ensure that our products, like our delicious lassis and pure paneer, are part of a larger, positive cycle of growth and support.
          </p>
 
          <h2>The 3P Framework</h2>
