--- a/index.html
+++ b/index.html
@@ -38,9 +38,12 @@
             
 }
       .molobig{
-          width:100%;
+          max-width:100%;
           border-radius:99999px;
           box-shadow:0 4px 8px rgba(0, 0, 0, 0.3);
+          max-width:600px;
+          margin-top:10px;
+
       }
       .molobig img {
           margin:10px 5px ;
