--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           border-radius:99999px;
           box-shadow:0 4px 8px rgba(0, 0, 0, 0.3);
           max-width:600px;
-          margin-top:10px;
+          margin:10px;
 
       }
       .molobig img {
