--- a/index.html
+++ b/index.html
@@ -42,12 +42,10 @@
           border-radius:99999px;
           box-shadow:0 4px 8px rgba(0, 0, 0, 0.3);
           max-width:600px;
-          margin:10px;
+          margin-top:10px;
 
       }
-      .molobig img {
-          margin:10px 5px ;
-      }
+      
         nav {
             display: flex;
             justify-content: space-between;
