--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
             
 }
       .molobig{
-          max-width:100%;
+
+          width:100%;
           border-radius:99999px;
           box-shadow:0 4px 8px rgba(0, 0, 0, 0.3);
           max-width:600px;
