--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@
     | ¤ |  Explore our Lassi Valley Webpage  with G. I. C.  Barwala Vikasanagar D. Dun from Uttrakhand | ¤ |
  </p>
             <p>Experience the rich and creamy taste of Uttrakhand tradition.</p>
+                     <p>Contact Us =+91 76688 70658</p>
         </section>
 
         <section class="products">
