--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
           margin-top:10px;
 
       }
+        .num{
+            font-size:20px;
+            color:blue;
+        }
       
         nav {
             display: flex;
@@ -240,7 +244,7 @@
     | ¤ |  Explore our Lassi Valley Webpage  with G. I. C.  Barwala Vikasanagar D. Dun from Uttrakhand | ¤ |
  </p>
             <p>Experience the rich and creamy taste of Uttrakhand tradition.</p>
-                     <p>Contact Us =+91 76688 70658</p>
+                     <p class ="num">Contact Us = +91 76688 70658</p>
         </section>
 
         <section class="products">
