--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 }
       .molobig{
 
-          width:100%;
+          
           border-radius:99999px;
           box-shadow:0 4px 8px rgba(0, 0, 0, 0.3);
-          max-width:600px;
+          max-width:80%;
           margin-top:10px;
 
       }
